# stabcodes

./: LICENSE  pyproject.toml
doc/source/: conf.py  index.rst  usage.rst
examples/surface_code/: dehn_twist.py  instantaneous_dehn_twst.py  memory.py  partial_measurement.py  transCNOT.py  transCZ.py  transHadamard.py  transS.py  transversal_cnot.py
stabcodes/: Pauli.py  _decoding_two_step_pymatching.py  measure_clock.py  pauli.py  recursivemapping.py  stabgen.py  stabilizer_code.py  stats_split.py  stim_experiment.py  surface_code.py  tools.py  visualization.py
tests/: run_doctests.py  test_dehn_twist.py  test_pauli.py  test_recursivemapping.py
