[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stabcodes"
version = "0.1"
dependencies = [
"networkx",
"numpy==1.*",
"typing_extensions",
"stim >= 1.12",
"sinter >= 1.12",
"qiskit",
"pymatching",
]

[project.optional-dependencies]
doc = [
"sphinx",
"pydata_sphinx_theme",
]
